<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/clique_bg_more_operation"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/shareTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:clickable="true"
        style="@style/tv_14_313131"
        android:text="@string/clique_share"
        android:gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/cl_eeeeee"
        />


    <LinearLayout
        android:id="@+id/noSelfOperationLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/reportTV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:clickable="true"
            style="@style/tv_14_313131"
            android:text="@string/clique_report"
            android:gravity="center"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/cl_eeeeee"
            />

        <TextView
            android:id="@+id/blacklistTV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:clickable="true"
            style="@style/tv_14_313131"
            android:text="@string/clique_blacklist"
            android:gravity="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/deleteTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:clickable="true"
        style="@style/tv_14_313131"
        android:text="@string/clique_delete"
        android:gravity="center"
        android:visibility="gone"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/cl_eeeeee"
        />

    <TextView
        android:id="@+id/cancelTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:clickable="true"
        style="@style/tv_14_313131"
        android:text="@string/clique_cancel"
        android:gravity="center"
        />

</LinearLayout>