<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.imgtxt.ImgTxtDetailActivity">

    <LinearLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionBarCL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">


            <ImageView
                android:id="@+id/backIV"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:clickable="true"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/shareIV"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_6"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/backIV"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/avatarIV"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/backIV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nicknameTV"
                style="@style/tv_14_313131"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_6"
                android:layout_marginRight="@dimen/dp_6"
                android:ellipsize="end"
                android:lines="1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/avatarIV"
                app:layout_constraintRight_toLeftOf="@id/attentionTV"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/attentionTV"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_28"
                android:background="@drawable/clique_bg_attention"
                android:clickable="true"
                android:drawableLeft="@drawable/clique_ic_mark"
                android:drawablePadding="@dimen/dp_4"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/clique_mark"
                android:textColor="@color/cl_e5004f"
                android:textSize="@dimen/sp_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/moreOperationIV"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/moreOperationIV"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_50"
                android:clickable="true"
                android:paddingLeft="@dimen/dp_16"
                android:paddingRight="@dimen/dp_16"
                android:src="@drawable/clique_ic_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.youth.banner.Banner
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/dp_270"
                    android:maxHeight="1000dp"
                    app:banner_indicator_selected_color="@color/cl_13b5b1"
                    app:banner_indicator_normal_color="@color/cl_ffffff"
                    app:banner_indicator_selected_width="@dimen/dp_8"
                    app:banner_indicator_normal_width="@dimen/dp_8"
                    app:banner_indicator_margin="@dimen/dp_8"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:banner_loop_time="5000"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/audioPlayLL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:background="@drawable/clique_bg_audio"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_12"
                    android:paddingTop="@dimen/dp_4"
                    android:paddingRight="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_4"
                    app:layout_constraintBottom_toBottomOf="@id/banner"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <ImageView
                        android:layout_width="@dimen/dp_14"
                        android:layout_height="@dimen/dp_14"
                        android:src="@drawable/clique_ic_audio" />

                    <TextView
                        android:id="@+id/audioPlayTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_4"
                        android:ellipsize="end"
                        android:lines="1"
                        android:maxWidth="@dimen/dp_100"
                        android:textColor="@color/cl_ffffff"
                        android:textSize="@dimen/sp_10" />

                </LinearLayout>


                <TextView
                    android:id="@+id/titleTV"
                    style="@style/tv_15_313131"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginRight="@dimen/dp_12"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/banner" />

                <TextView
                    android:id="@+id/describeTV"
                    style="@style/tv_12_313131"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_12"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTV" />

                <TextView
                    android:id="@+id/dateTV"
                    style="@style/tv_10_313131"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintLeft_toLeftOf="@id/describeTV"
                    app:layout_constraintTop_toBottomOf="@id/describeTV" />

                <TextView
                    android:id="@+id/commentCountTV"
                    style="@style/tv_12_313131"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_26"
                    android:text="@string/clique_format_comment_count"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintLeft_toLeftOf="@id/describeTV"
                    app:layout_constraintTop_toBottomOf="@id/dateTV" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentRV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/commentCountTV" />

                <TextView
                    android:id="@+id/loadMoreTV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_44"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/clique_load_more_comment"
                    android:textColor="@color/cl_13b5b1"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/commentRV" />

                <TextView
                    android:id="@+id/recommendTV"
                    style="@style/tv_15_313131"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/clique_recommend_goods"
                    app:layout_constraintLeft_toLeftOf="@id/titleTV"
                    app:layout_constraintTop_toBottomOf="@id/loadMoreTV" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommendRV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recommendTV" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomCL"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/cl_ffffff">

            <TextView
                android:id="@+id/commentButtonTV"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@drawable/clique_bg_comment"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_10"
                android:text="@string/clique_comment_content"
                android:textColor="@color/cl_707070"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintEnd_toStartOf="@id/endorseCountLL"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/endorseCountLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/commentButtonTV"
                app:layout_constraintRight_toLeftOf="@id/collectNumberLL"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/endorseIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:src="@drawable/dynamic_ic_like_normal" />

                <TextView
                    android:id="@+id/endorseCountTV"
                    style="@style/tv_12_313131"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:text="0" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/collectNumberLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/endorseCountLL"
                app:layout_constraintRight_toLeftOf="@id/commentCountBottomTV"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/collectIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:src="@drawable/dynamic_ic_collect_select" />

                <TextView
                    android:id="@+id/collectCountTV"
                    style="@style/tv_12_313131"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_6"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:text="0" />
            </LinearLayout>


            <TextView
                android:id="@+id/commentCountBottomTV"
                style="@style/tv_12_313131"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dp_10"
                android:drawableLeft="@drawable/clique_ic_imgtxt_comment"
                android:drawablePadding="@dimen/dp_10"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:text="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/collectNumberLL"
                app:layout_constraintRight_toLeftOf="@id/giftIV"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/giftIV"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_8"
                android:src="@drawable/clique_ic_imgtxt_gift"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:background="@color/cl_eeeeee"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

<!--    <com.liuchat.gift.view.float.FloatView-->
<!--        android:id="@+id/floatView"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</FrameLayout>
